<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearListWidget"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/widget_list"
                android:id="@+id/textWidget"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerWidgets"
                android:layout_marginTop="5dp"
                android:padding="3dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearWidget">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/box_name"
                    android:id="@+id/textViewURL"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerBox"
                    android:layout_marginTop="5dp"
                    android:padding="3dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_name"
                    android:id="@+id/textName"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp" />

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/editName"
                    android:background="#ffffff"
                    android:hint="@string/app_name"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_webcam_port"
                    android:id="@+id/textPort"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editPort"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="#ffffff"
                    android:paddingStart="5dp"
                    android:paddingEnd="15dp"
                    android:inputType="number"
                    android:hint="8080" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_webcam_capture"
                    android:id="@+id/textUrlCapture"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editURL"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:background="#ffffff"
                    android:paddingStart="5dp"
                    android:paddingEnd="15dp"
                    android:hint="@string/widget_webcam_snapshot" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>



