<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearListWidget"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/widget_list"
                android:id="@+id/textWidget"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerWidgets"
                android:layout_below="@+id/textWidget"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:padding="3dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearWidget">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/box_name"
                    android:layout_below="@+id/spinnerWidgets"
                    android:id="@+id/textViewURL"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerBox"
                    android:layout_below="@+id/textViewURL"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:padding="3dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_name"
                    android:id="@+id/textName"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_below="@+id/spinnerBox"
                    android:textSize="18dp"
                    android:layout_marginTop="20dp" />

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/editName"
                    android:layout_below="@+id/textName"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="#ffffff"
                    android:hint="Domo Widget"
                    android:paddingLeft="5dp" />

                <CheckBox
                    android:id="@+id/checkSyntheseVocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:contextClickable="true"
                    android:text="@string/widget_vocal"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:theme="@style/DomoWidgetTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_vocal_key_phrase"
                    android:id="@+id/textKeyPhrase"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_below="@+id/checkSyntheseVocal"
                    android:textSize="18dp"
                    android:layout_marginTop="20dp" />

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/editKeyPhrase"
                    android:layout_below="@+id/textKeyPhrase"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="#ffffff"
                    android:hint="Ok DomoWidget"
                    android:paddingLeft="5dp" />

                <TextView
                    android:id="@+id/textThresholdLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editKeyPhrase"
                    android:layout_marginTop="10dp"
                    android:text="@string/threshold_level"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/thresholdLevelSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="50"
                    android:progress="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_action_image_picture"
                    android:id="@+id/textViewOn"
                    android:layout_below="@+id/thresholdLevelSeekBar"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageButtonOn"
                    android:src="@drawable/widget_vocal_preview"
                    android:background="#00ffffff"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/textViewOn" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>



